# cipherstash-playground

./: .gitignore  README.md  docker-compose.yml
app/: .env.example  Dockerfile  bun.lockb  index.ts  package.json  prettier.config.mjs
app/src/app/: layout.tsx  page.tsx
app/src/components/: Search.tsx  badge.tsx  checkbox.tsx  input.tsx  link.tsx  navbar.tsx  textarea.tsx
app/src/lib/: db.mjs  schema.ts
config/: cipherstash-proxy.toml  promtail.yaml
config/cipherstash/: dataset.yml
config/dashboards/: cipherstash.json
config/datadog/: datadog-conf.yaml
config/grafana/dashboards/: cipherstash.json
config/prometheus/: prometheus.yml
config/toxiproxy/: toxiproxy.json
db/: Dockerfile  dump.sql
db-encrypted/: Dockerfile  dump.sql
dynamodb/: .envrc.example  README.md  docker-compose.yml
dynamodb/app/: Cargo.toml  Dockerfile
dynamodb/app/src/: main.rs
dynamodb/app/src/common/: mod.rs  user.rs
dynamodb/dynamodb/: Dockerfile  entrypoint.sh
dynamodb/dynamodb/data/: shared-local-instance.db
examples/rest-api/: index.ts
postgres/: README.md  docker-compose.yml
postgres/app/: .gitignore  README.md  entrypoint.sh  package.json  tailwind.config.ts
postgres/app/src/app/: application-layout.tsx
postgres/app/src/components/: avatar.tsx  (+5 more)
postgres/config/cipherstash/: cipherstash-proxy.toml  dataset.yml
postgres/config/grafana/: grafana-datasources.yml
postgres/db/: Dockerfile  dump.sql
postgres/examples/prisma/: README.md  bun.lockb  index.ts  package.json
postgres/examples/rest-api/: Dockerfile  README.md  bun.lockb  package.json
(+2 files in other folders)
