[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
cipherstash-dynamodb = { version = "0.4.0", registry = "cipherstash-cipherstash" }
tokio = { version = "1", features = ["full"] }
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.3.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
